plugins {
    id 'java'
    id 'idea'
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'idea'

    compileJava.options.encoding = 'UTF-8'
    compileTestJava.options.encoding = 'UTF-8'

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    clean {
        delete 'build', 'out', 'classes'
    }
}

wrapper {
    gradleVersion = '5.1.1'
    distributionType = Wrapper.DistributionType.ALL
}

project.test.dependsOn {
    rootProject.subprojects.collect {
        it.tasks.getByName 'test'
    }
}

ext {
    libs = [
            test : 'org.testng:testng:7.0.0-beta1'
    ]
}
